// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/fleet-members/AreasOfOperation Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title grey--text"
    >
      <div
        class="layout row space-between align-center"
      >
        <div
          class="flex"
        >
          <h3>
            Areas of Operation
          </h3>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn theme--light primary"
            slot="activator"
            text=""
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--dark"
              >
                add_circle_outline
              </i>
              Add new area
            
            </div>
          </button>
          <div
            class="v-dialog__container"
            style="display: inline-block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 600px; display: none;"
              >
                 
                <div
                  class="v-card v-sheet theme--light"
                >
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <div
                    class="v-card__text grey--text"
                  >
                    
              Coming Soon here
            
                  </div>
                   
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <form
                    class="py-2 ma-2"
                  >
                    <div
                      class="flex xs12 px-2"
                    >
                      <div
                        class="mb-2 text-uppercase grey--text font-weight-bold"
                      >
                        
      Area address
    
                      </div>
                       
                      <div
                        class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-text-field__slot"
                            >
                              <input
                                placeholder="Enter an address"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            class="v-text-field__details"
                          >
                            <div
                              class="v-messages theme--light"
                            >
                              <div
                                class="v-messages__wrapper"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                     
                    <div
                      class="flex xs12 px-2"
                    >
                      <div
                        class="text-uppercase grey--text font-weight-bold"
                      >
                        
      Radius
    
                      </div>
                       
                      <div
                        class="v-input v-input--slider v-input--slider--thumb-label theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-slider"
                            >
                              <input
                                aria-readonly="false"
                                aria-valuemax="100"
                                aria-valuemin="0"
                                aria-valuenow="0"
                                readonly="readonly"
                                role="slider"
                                value="0"
                              />
                              <div
                                class="v-slider__track__container"
                              >
                                <div
                                  class="v-slider__track"
                                  style="left: 7px; width: 100%;"
                                />
                                <div
                                  class="v-slider__track-fill primary"
                                  style="left: 0px; width: 0%;"
                                />
                              </div>
                              <div
                                class="v-slider__thumb-container v-slider__thumb-container--show-label"
                                style="left: 0%;"
                              >
                                <div
                                  class="v-slider__thumb"
                                />
                                <div
                                  class="v-slider__thumb-label__container"
                                  style="display: none;"
                                >
                                  <div
                                    class="v-slider__thumb-label"
                                    style="height: 32px; width: 32px;"
                                  >
                                    <span>
                                      0
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="v-messages theme--light"
                          >
                            <span
                              class="v-messages__wrapper"
                              name="message-transition"
                              tag="div"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                     
                    <div
                      class="flex xs12 pa-2"
                    >
                      <div
                        class="text-xs-center"
                      >
                        
      MAP HERE
    
                      </div>
                    </div>
                     
                    <div
                      class="layout align-center justify-space-between"
                    >
                      <button
                        class="v-btn v-btn--disabled v-btn--depressed theme--light"
                        disabled="disabled"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
      Cancel
    
                        </div>
                      </button>
                       
                      <button
                        class="v-btn v-btn--depressed theme--light primary"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
      Save changes
    
                        </div>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text primary--text"
    >
      <div
        item-key="id"
      >
        <div
          class="ui-datatable elevation-1"
        >
          <div
            class="v-table__overflow"
          >
            <table
              class="v-datatable v-table v-datatable--select-all theme--light"
            >
              <thead>
                <tr>
                  <th>
                    <div
                      class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              check_box_outline_blank
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    aria-label="Area Name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        Area Name
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="State: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        State
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Radius: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        Radius
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Manage: Not sorted."
                    aria-sort="none"
                    class="column text-xs-center"
                    role="columnheader"
                    scope="col"
                  >
                    <span>
                      
        Manage
      
                    </span>
                  </th>
                </tr>
                <tr
                  class="v-datatable__progress"
                >
                  <th
                    class="column"
                    colspan="5"
                  />
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-xs-center"
                    colspan="5"
                  >
                    No matching records found
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
         
        <div
          class="layout align-center"
        >
          <div
            class="flex grow justify-center"
          >
            <div
              class="layout justify-center"
            >
              <ul
                class="v-pagination theme--light"
              >
                <li>
                  <button
                    class="v-pagination__navigation v-pagination__navigation--disabled"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_left
                    </i>
                  </button>
                </li>
                <li>
                  <button
                    class="v-pagination__item v-pagination__item--active primary"
                    type="button"
                  >
                    1
                  </button>
                </li>
                <li>
                  <button
                    class="v-pagination__navigation v-pagination__navigation--disabled"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_right
                    </i>
                  </button>
                </li>
              </ul>
            </div>
          </div>
           
          <div
            class="flex shrink"
          >
            <div
              class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <label
                      aria-hidden="true"
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      Results Per Page
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        10
                      </div>
                      <input
                        aria-label="Results Per Page"
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  5
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            class="primary--text"
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  10
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  15
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  25
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  30
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  50
                                </div>
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
  </div>
</div>
`;

exports[`components/fleet-members/AreasOfOperation Snapshots IsLoading 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title grey--text"
    >
      <div
        class="layout row space-between align-center"
      >
        <div
          class="flex"
        >
          <h3>
            Areas of Operation
          </h3>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn theme--light primary"
            slot="activator"
            text=""
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--dark"
              >
                add_circle_outline
              </i>
              Add new area
            
            </div>
          </button>
          <div
            class="v-dialog__container"
            style="display: inline-block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 600px; display: none;"
              >
                 
                <div
                  class="v-card v-sheet theme--light"
                >
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <div
                    class="v-card__text grey--text"
                  >
                    
              Coming Soon here
            
                  </div>
                   
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <form
                    class="py-2 ma-2"
                  >
                    <div
                      class="flex xs12 px-2"
                    >
                      <div
                        class="mb-2 text-uppercase grey--text font-weight-bold"
                      >
                        
      Area address
    
                      </div>
                       
                      <div
                        class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-text-field__slot"
                            >
                              <input
                                placeholder="Enter an address"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            class="v-text-field__details"
                          >
                            <div
                              class="v-messages theme--light"
                            >
                              <div
                                class="v-messages__wrapper"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                     
                    <div
                      class="flex xs12 px-2"
                    >
                      <div
                        class="text-uppercase grey--text font-weight-bold"
                      >
                        
      Radius
    
                      </div>
                       
                      <div
                        class="v-input v-input--slider v-input--slider--thumb-label theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-slider"
                            >
                              <input
                                aria-readonly="false"
                                aria-valuemax="100"
                                aria-valuemin="0"
                                aria-valuenow="0"
                                readonly="readonly"
                                role="slider"
                                value="0"
                              />
                              <div
                                class="v-slider__track__container"
                              >
                                <div
                                  class="v-slider__track"
                                  style="left: 7px; width: 100%;"
                                />
                                <div
                                  class="v-slider__track-fill primary"
                                  style="left: 0px; width: 0%;"
                                />
                              </div>
                              <div
                                class="v-slider__thumb-container v-slider__thumb-container--show-label"
                                style="left: 0%;"
                              >
                                <div
                                  class="v-slider__thumb"
                                />
                                <div
                                  class="v-slider__thumb-label__container"
                                  style="display: none;"
                                >
                                  <div
                                    class="v-slider__thumb-label"
                                    style="height: 32px; width: 32px;"
                                  >
                                    <span>
                                      0
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="v-messages theme--light"
                          >
                            <span
                              class="v-messages__wrapper"
                              name="message-transition"
                              tag="div"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                     
                    <div
                      class="flex xs12 pa-2"
                    >
                      <div
                        class="text-xs-center"
                      >
                        
      MAP HERE
    
                      </div>
                    </div>
                     
                    <div
                      class="layout align-center justify-space-between"
                    >
                      <button
                        class="v-btn v-btn--disabled v-btn--depressed theme--light"
                        disabled="disabled"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
      Cancel
    
                        </div>
                      </button>
                       
                      <button
                        class="v-btn v-btn--depressed theme--light primary"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
      Save changes
    
                        </div>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text primary--text"
    >
      <div
        item-key="id"
      >
        <div
          class="ui-datatable elevation-1"
        >
          <div
            class="v-table__overflow"
          >
            <table
              class="v-datatable v-table v-datatable--select-all theme--light"
            >
              <thead>
                <tr>
                  <th>
                    <div
                      class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              check_box_outline_blank
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    aria-label="Area Name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        Area Name
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="State: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        State
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Radius: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        Radius
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Manage: Not sorted."
                    aria-sort="none"
                    class="column text-xs-center"
                    role="columnheader"
                    scope="col"
                  >
                    <span>
                      
        Manage
      
                    </span>
                  </th>
                </tr>
                <tr
                  class="v-datatable__progress"
                >
                  <th
                    class="column"
                    colspan="5"
                  >
                    <div
                      aria-valuemax="100"
                      aria-valuemin="0"
                      class="v-progress-linear"
                      role="progressbar"
                      style="height: 10px;"
                    >
                      <div
                        class="v-progress-linear__background primary"
                        style="height: 10px; opacity: 0.3; width: 100%;"
                      />
                      <div
                        class="v-progress-linear__bar"
                      >
                        <div
                          class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                        >
                          <div
                            class="v-progress-linear__bar__indeterminate long primary"
                          />
                          <div
                            class="v-progress-linear__bar__indeterminate short primary"
                          />
                        </div>
                        <!---->
                      </div>
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="text-xs-center"
                    colspan="5"
                  >
                    No matching records found
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
         
        <div
          class="layout align-center"
        >
          <div
            class="flex grow justify-center"
          >
            <div
              class="layout justify-center"
            >
              <ul
                class="v-pagination v-pagination--disabled theme--light"
              >
                <li>
                  <button
                    class="v-pagination__navigation v-pagination__navigation--disabled"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_left
                    </i>
                  </button>
                </li>
                <li>
                  <button
                    class="v-pagination__item v-pagination__item--active primary"
                    type="button"
                  >
                    1
                  </button>
                </li>
                <li>
                  <button
                    class="v-pagination__navigation v-pagination__navigation--disabled"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_right
                    </i>
                  </button>
                </li>
              </ul>
            </div>
          </div>
           
          <div
            class="flex shrink"
          >
            <div
              class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <label
                      aria-hidden="true"
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      Results Per Page
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        10
                      </div>
                      <input
                        aria-label="Results Per Page"
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  5
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            class="primary--text"
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  10
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  15
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  25
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  30
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  50
                                </div>
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
  </div>
</div>
`;

exports[`components/fleet-members/AreasOfOperation Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title grey--text"
    >
      <div
        class="layout row space-between align-center"
      >
        <div
          class="flex"
        >
          <h3>
            Areas of Operation
          </h3>
        </div>
         
        <div
          class="flex shrink"
        >
          <button
            class="v-btn theme--light primary"
            slot="activator"
            text=""
            type="button"
          >
            <div
              class="v-btn__content"
            >
              <i
                aria-hidden="true"
                class="v-icon v-icon--left material-icons theme--dark"
              >
                add_circle_outline
              </i>
              Add new area
            
            </div>
          </button>
          <div
            class="v-dialog__container"
            style="display: inline-block;"
          >
            <div
              class="v-dialog__content"
              style="z-index: 0;"
              tabindex="-1"
            >
              <div
                class="v-dialog"
                style="max-width: 600px; display: none;"
              >
                 
                <div
                  class="v-card v-sheet theme--light"
                >
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <div
                    class="v-card__text grey--text"
                  >
                    
              Coming Soon here
            
                  </div>
                   
                  <hr
                    class="v-divider theme--light"
                  />
                   
                  <form
                    class="py-2 ma-2"
                  >
                    <div
                      class="flex xs12 px-2"
                    >
                      <div
                        class="mb-2 text-uppercase grey--text font-weight-bold"
                      >
                        
      Area address
    
                      </div>
                       
                      <div
                        class="v-input v-text-field v-text-field--single-line v-text-field--enclosed v-text-field--outline v-text-field--placeholder theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-text-field__slot"
                            >
                              <input
                                placeholder="Enter an address"
                                type="text"
                              />
                            </div>
                          </div>
                          <div
                            class="v-text-field__details"
                          >
                            <div
                              class="v-messages theme--light"
                            >
                              <div
                                class="v-messages__wrapper"
                              />
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                     
                    <div
                      class="flex xs12 px-2"
                    >
                      <div
                        class="text-uppercase grey--text font-weight-bold"
                      >
                        
      Radius
    
                      </div>
                       
                      <div
                        class="v-input v-input--slider v-input--slider--thumb-label theme--light"
                      >
                        <div
                          class="v-input__control"
                        >
                          <div
                            class="v-input__slot"
                          >
                            <div
                              class="v-slider"
                            >
                              <input
                                aria-readonly="false"
                                aria-valuemax="100"
                                aria-valuemin="0"
                                aria-valuenow="0"
                                readonly="readonly"
                                role="slider"
                                value="0"
                              />
                              <div
                                class="v-slider__track__container"
                              >
                                <div
                                  class="v-slider__track"
                                  style="left: 7px; width: 100%;"
                                />
                                <div
                                  class="v-slider__track-fill primary"
                                  style="left: 0px; width: 0%;"
                                />
                              </div>
                              <div
                                class="v-slider__thumb-container v-slider__thumb-container--show-label"
                                style="left: 0%;"
                              >
                                <div
                                  class="v-slider__thumb"
                                />
                                <div
                                  class="v-slider__thumb-label__container"
                                  style="display: none;"
                                >
                                  <div
                                    class="v-slider__thumb-label"
                                    style="height: 32px; width: 32px;"
                                  >
                                    <span>
                                      0
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            class="v-messages theme--light"
                          >
                            <span
                              class="v-messages__wrapper"
                              name="message-transition"
                              tag="div"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                     
                    <div
                      class="flex xs12 pa-2"
                    >
                      <div
                        class="text-xs-center"
                      >
                        
      MAP HERE
    
                      </div>
                    </div>
                     
                    <div
                      class="layout align-center justify-space-between"
                    >
                      <button
                        class="v-btn v-btn--disabled v-btn--depressed theme--light"
                        disabled="disabled"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
      Cancel
    
                        </div>
                      </button>
                       
                      <button
                        class="v-btn v-btn--depressed theme--light primary"
                        type="button"
                      >
                        <div
                          class="v-btn__content"
                        >
                          
      Save changes
    
                        </div>
                      </button>
                    </div>
                  </form>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text primary--text"
    >
      <div
        item-key="id"
      >
        <div
          class="ui-datatable elevation-1"
        >
          <div
            class="v-table__overflow"
          >
            <table
              class="v-datatable v-table v-datatable--select-all theme--light"
            >
              <thead>
                <tr>
                  <th>
                    <div
                      class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              check_box_outline_blank
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    aria-label="Area Name: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        Area Name
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="State: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        State
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Radius: Not sorted. Activate to sort ascending."
                    aria-sort="none"
                    class="column sortable text-xs-left"
                    role="columnheader"
                    scope="col"
                    tabindex="0"
                  >
                    <span>
                      
        Radius
      
                    </span>
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                      style="font-size: 16px;"
                    >
                      arrow_upward
                    </i>
                  </th>
                  <th
                    aria-label="Manage: Not sorted."
                    aria-sort="none"
                    class="column text-xs-center"
                    role="columnheader"
                    scope="col"
                  >
                    <span>
                      
        Manage
      
                    </span>
                  </th>
                </tr>
                <tr
                  class="v-datatable__progress"
                >
                  <th
                    class="column"
                    colspan="5"
                  />
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <div
                      class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      primary=""
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              primary=""
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              check_box_outline_blank
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                   
                  <td
                    class="text-xs-left"
                  >
                    
              614 Parker Way
            
                  </td>
                  <td
                    class="text-xs-left"
                  >
                    
              North Carolina
            
                  </td>
                  <td
                    class="text-xs-left"
                  >
                    
    74 mi.
  
                  </td>
                  <td
                    class="justify-center text-xs-center"
                  >
                    <button
                      class="v-btn theme--dark primary primary-text--text"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
                Manage
               
                        <i
                          aria-hidden="true"
                          class="v-icon v-icon--right material-icons theme--dark"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </button>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                         
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Delete
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      primary=""
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              primary=""
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              check_box_outline_blank
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                   
                  <td
                    class="text-xs-left"
                  >
                    
              621 Marlen Lodge Apt. 955
            
                  </td>
                  <td
                    class="text-xs-left"
                  >
                    
              Virginia
            
                  </td>
                  <td
                    class="text-xs-left"
                  >
                    
    45 mi.
  
                  </td>
                  <td
                    class="justify-center text-xs-center"
                  >
                    <button
                      class="v-btn theme--dark primary primary-text--text"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
                Manage
               
                        <i
                          aria-hidden="true"
                          class="v-icon v-icon--right material-icons theme--dark"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </button>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                         
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Delete
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td>
                    <div
                      class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                      primary=""
                    >
                      <div
                        class="v-input__control"
                      >
                        <div
                          class="v-input__slot"
                        >
                          <div
                            class="v-input--selection-controls__input"
                          >
                            <input
                              aria-checked="false"
                              primary=""
                              role="checkbox"
                              type="checkbox"
                              value=""
                            />
                            <div
                              class="v-input--selection-controls__ripple"
                            />
                            <i
                              aria-hidden="true"
                              class="v-icon material-icons theme--light"
                            >
                              check_box_outline_blank
                            </i>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                   
                  <td
                    class="text-xs-left"
                  >
                    
              5203 Wintheiser Walks Suite 932
            
                  </td>
                  <td
                    class="text-xs-left"
                  >
                    
              Texas
            
                  </td>
                  <td
                    class="text-xs-left"
                  >
                    
    37 mi.
  
                  </td>
                  <td
                    class="justify-center text-xs-center"
                  >
                    <button
                      class="v-btn theme--dark primary primary-text--text"
                      type="button"
                    >
                      <div
                        class="v-btn__content"
                      >
                        
                Manage
               
                        <i
                          aria-hidden="true"
                          class="v-icon v-icon--right material-icons theme--dark"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </button>
                    <div
                      class="v-menu"
                    >
                      <div
                        class="v-menu__content theme--light "
                        style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                      >
                         
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__title"
                              >
                                Delete
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
         
        <div
          class="layout align-center"
        >
          <div
            class="flex grow justify-center"
          >
            <div
              class="layout justify-center"
            >
              <ul
                class="v-pagination theme--light"
              >
                <li>
                  <button
                    class="v-pagination__navigation v-pagination__navigation--disabled"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_left
                    </i>
                  </button>
                </li>
                <li>
                  <button
                    class="v-pagination__item v-pagination__item--active primary"
                    type="button"
                  >
                    1
                  </button>
                </li>
                <li>
                  <button
                    class="v-pagination__navigation v-pagination__navigation--disabled"
                    type="button"
                  >
                    <i
                      aria-hidden="true"
                      class="v-icon material-icons theme--light"
                    >
                      chevron_right
                    </i>
                  </button>
                </li>
              </ul>
            </div>
          </div>
           
          <div
            class="flex shrink"
          >
            <div
              class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
              role="combobox"
            >
              <div
                class="v-input__control"
              >
                <div
                  class="v-input__slot"
                >
                  <div
                    class="v-select__slot"
                  >
                    <label
                      aria-hidden="true"
                      class="v-label v-label--active theme--light"
                      style="left: 0px; position: absolute;"
                    >
                      Results Per Page
                    </label>
                    <div
                      class="v-select__selections"
                    >
                      <div
                        class="v-select__selection v-select__selection--comma"
                      >
                        10
                      </div>
                      <input
                        aria-label="Results Per Page"
                        aria-readonly="false"
                        autocomplete="on"
                        readonly="readonly"
                        type="text"
                      />
                    </div>
                    <div
                      class="v-input__append-inner"
                    >
                      <div
                        class="v-input__icon v-input__icon--append"
                      >
                        <i
                          aria-hidden="true"
                          class="v-icon material-icons theme--light"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                  </div>
                  <div
                    class="v-menu"
                  >
                    <div
                      class="v-menu__content theme--light "
                      style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                    >
                      <div
                        class="v-select-list v-card theme--light"
                      >
                        <div
                          class="v-list theme--light"
                          role="list"
                        >
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  5
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            class="primary--text"
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  10
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  15
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  25
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  30
                                </div>
                              </div>
                            </a>
                          </div>
                          <div
                            role="listitem"
                          >
                            <a
                              class="v-list__tile v-list__tile--link theme--light"
                            >
                              <div
                                class="v-list__tile__content"
                              >
                                <div
                                  class="v-list__tile__title"
                                >
                                  50
                                </div>
                              </div>
                            </a>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="v-text-field__details"
                >
                  <div
                    class="v-messages theme--light"
                  >
                    <div
                      class="v-messages__wrapper"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
  </div>
</div>
`;
